<resources>
    <string name="app_name">pessoal_codelabs_02.1_about_me</string>
    <string name="name">Rodrigo Bossini</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">
        I\'m Rodrigo Bossini. I teach a lot. I like playing chess and reading books.\n
        I buy <b>books</b> a lot and try to  read as many as I can.\n
        I like purchasing stocks in brazilian stock market.\n
        I try to make the things <u>vai</u> I have to make with my heart.\
        I guess that is it.\n
        Ah yes, I think I have a <i>mission</i> in this world but I\'m yet to find it.
         I\'m Rodrigo Bossini. I teach a lot. I like playing chess and reading books.\n
        I buy <b>books</b> a lot and try to  read as many as I can.\n
        I like purchasing stocks in brazilian stock market.\n
        I try to make the things <u>vai</u> I have to make with my heart.\
        I guess that is it.\n
        Ah yes, I think I have a <i>mission</i> in this world but I\'m yet to find it.
         I\'m Rodrigo Bossini. I teach a lot. I like playing chess and reading books.\n
        I buy <b>books</b> a lot and try to  read as many as I can.\n
        I like purchasing stocks in brazilian stock market.\n
        I try to make the things <u>vai</u> I have to make with my heart.\
        I guess that is it.\n
        Ah yes, I think I have a <i>mission</i> in this world but I\'m yet to find it.
         I\'m Rodrigo Bossini. I teach a lot. I like playing chess and reading books.\n
        I buy <b>books</b> a lot and try to  read as many as I can.\n
        I like purchasing stocks in brazilian stock market.\n
        I try to make the things <u>vai</u> I have to make with my heart.\
        I guess that is it.\n
        Ah yes, I think I have a <i>mission</i> in this world but I\'m yet to find it.
         I\'m Rodrigo Bossini. I teach a lot. I like playing chess and reading books.\n
        I buy <b>books</b> a lot and try to  read as many as I can.\n
        I like purchasing stocks in brazilian stock market.\n
        I try to make the things <u>vai</u> I have to make with my heart.\
        I guess that is it.\n
        Ah yes, I think I have a <i>mission</i> in this world but I\'m yet to find it.
         I\'m Rodrigo Bossini. I teach a lot. I like playing chess and reading books.\n
        I buy <b>books</b> a lot and try to  read as many as I can.\n
        I like purchasing stocks in brazilian stock market.\n
        I try to make the things <u>vai</u> I have to make with my heart.\
        I guess that is it.\n
        Ah yes, I think I have a <i>mission</i> in this world but I\'m yet to find it.
         I\'m Rodrigo Bossini. I teach a lot. I like playing chess and reading books.\n
        I buy <b>books</b> a lot and try to  read as many as I can.\n
        I like purchasing stocks in brazilian stock market.\n
        I try to make the things <u>vai</u> I have to make with my heart.\
        I guess that is it.\n
        Ah yes, I think I have a <i>mission</i> in this world but I\'m yet to find it.
    </string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>
